--- a/finals/styles/login.module.css
+++ b/finals/styles/login.module.css
@@ -21,6 +21,7 @@
   font-family: "Inter", sans-serif;
   font-size: 1rem;
   font-weight: 300;
+  text-align: center;
   padding: 0;
   margin: 0;
 }
